--- a/summer-of-code/week-05/day4.html
+++ b/summer-of-code/week-05/day4.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title></title>
-  <script type="text/javascript" src="day4.js"></script>
+  <script type="text/javascript" src="day4_homework.js"></script>
 </head>
 <body>
 
