--- a/summer-of-code/courses/week-06/day1.html
+++ b/summer-of-code/courses/week-06/day1.html
@@ -2,11 +2,14 @@
 <html>
 <head>
   <title></title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 </head>
 <body>
 
 <p id="anavirginia"></p>
+<button id="myButton">Click</button>
+
 
 <p id="kasia"></p>
 
